# VulkanVoxelEngine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compile_commands.json  imgui.ini  makeShaders.ps1  makeShaders.sh
engine/: CMakeLists.txt  app.h  logger.hpp  main.cpp  setup.cpp  vertex.cpp  vertex.h  vertex.hpp
engine/app/: app.hpp  app.ixx  class.ixx  common.ixx  setup.cpp  setup.ixx
engine/cmake/: engineSetup.cmake  glfw.cmake  glm.cmake  imgui.cmake  shaders.cmake  spdlog.cmake  vulkan.cmake
engine/core/: CMakeLists.txt
engine/core/include/core/: make_logger.hpp
engine/engine/: app.cpp  app.hpp  camera.hpp  core.cpp  core.hpp  debug.hpp  defines.hpp  directions.hpp  image.cpp  image.hpp  input.hpp  logger.cpp  rect.hpp  shaders.hpp  swapchainConfig.hpp  validators.hpp  window.cpp  window.hpp
engine/engine/cameras/: perspective.hpp
engine/engine/util/: window_manager.hpp
engine/engine/vulkan/: createInstance.hpp  memorySelector.hpp  physicalDeviceSelector.hpp  pipeline.hpp  queueFinder.cpp  queueFinder.hpp  swapchainConfig.hpp  validators.hpp  vk-logger.cpp  vk-logger.hpp
engine/engine/vulkan/extensions/: pipeline.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
engine/include/engine/: app.hpp  camera.hpp  debug.hpp  input.hpp  setup.hpp  structs.hpp  window.hpp  window_manager.hpp
engine/include/engine/cameras/: perspective.hpp
engine/include/engine/util/: macros.hpp
engine/logger/: CMakeLists.txt
engine/src/: CMakeLists.txt  app.cpp  core.cpp  debug.cpp  image.cpp  input.cpp  logger.hpp  setup.cpp  window.cpp
engine/vulkan/: CMakeLists.txt
engine/vulkan/include/: vk_mem_alloc.h
engine/vulkan/include/vkh/: instance.hpp  macros.hpp  memorySelector.hpp  physicalDeviceSelector.hpp  pipeline.hpp  queueFinder.hpp  shader.hpp  structs.hpp  swapchain.hpp  validators.hpp
engine/vulkan/src/: CMakeLists.txt  dynLoader.cpp  instance.cpp  physicalDevice.cpp  queueFinder.cpp  shader.cpp  structs.cpp  swapchain.cpp  validators.cpp  vk-logger.cpp  vk-logger.hpp  vmaImpl.cpp
renderer/: CMakeLists.txt  alias.ixx  core.h  descriptors.cpp  descriptors.cxx  descriptors.h  descriptors.ixx  framebuffer.cpp  framebuffer.cxx  framebuffer.h  framebuffer.ixx  instance.cpp  instance.cxx  instance.h  instance.ixx  lib.cpp  lib.h  log.h  logicalDevice.cpp  logicalDevice.h  mapping.cpp  mapping.h  physicalDevice.cpp  physicalDevice.h  pipeline.h  queue.cpp  queue.cxx  queue.h  queue.ixx  shader.cpp  shader.h  shaderModule.cpp  shaderModule.h  surface.cpp  surface.cxx  surface.h  surface.ixx  swapChain.cpp  swapChain.h  swapchain.cpp  (+11 more)
renderer/buffers/: CMakeLists.txt  buffer.cpp  buffer.cxx  buffer.h  buffer.ixx  index.cpp  index.cxx  index.h  index.ixx  uniform.cpp  uniform.cxx  uniform.h  uniform.ixx  vertex.cpp  vertex.cxx  vertex.h  vertex.ixx
renderer/commands/: CMakeLists.txt  buffer.cpp  buffer.cxx  buffer.h  buffer.ixx  pool.cpp  pool.cxx  pool.h  pool.ixx
renderer/device/: CMakeLists.txt  device.cpp  device.cxx  device.h  device.ixx  logicalDevice.cpp  logicalDevice.h  memory.cpp  memory.cxx  memory.h  memory.ixx  physical.cxx  physical.ixx  physicalDevice.cpp  physicalDevice.h
renderer/pipeline/: CMakeLists.txt  descriptorSetLayout.cpp  descriptorSetLayout.h  graphics.cpp  graphics.cxx  graphics.h  graphics.ixx  layout.cpp  layout.cxx  layout.h  layout.ixx  pipeline.h  pipeline.ixx  renderPass.cpp  renderPass.cxx  renderPass.h  renderPass.ixx
renderer/refs/: ref.h  refable.h
renderer/shaders/: CMakeLists.txt  shader.cpp  shader.cxx  shader.h  shader.ixx  shaderModule.cpp  shaderModule.cxx  shaderModule.h  shaderModule.ixx
renderer/structs/: MappedMemoryRange.h  attachmentDescription.h  attachmentDescription.ixx  bufferCopy.ixx  descriptorSetLayout.h  mappedMemoryRange.ixx  pipelineColorBlendAttachmentState.h  pipelineColorBlendAttachmentState.ixx  subpassDependency.h  subpassDependency.ixx  subpassDescription.h  subpassDescription.ixx  vertexInputAttributeDescription.h  vertexInputAttributeDescription.ixx  vertexInputBindingDescription.h  vertexInputBindingDescription.ixx  viewport.h  viewport.ixx
renderer/structs/info/: all.h  application.h  application.ixx  bufferCopy.h  commands.h  deviceCreate.h  deviceCreate.ixx  deviceQueueCreate.ixx  deviceQueueCreation.h  framebufferCreate.h  framebufferCreate.ixx  imageViewCreate.h  imageViewCreate.ixx  instanceCreate.h  instanceCreate.ixx  memoryAllocate.h  memoryAllocate.ixx  pipeline.h  present.h  present.ixx  renderPassCreate.h  renderPassCreate.ixx  shaderModuleCreate.h  shaderModuleCreate.ixx  submit.h  submit.ixx  swapchainCreate.h  swapchainCreate.ixx  sync.h
renderer/structs/info/buffers/: create.h  create.ixx
renderer/structs/info/commands/: bufferAllocate.h  bufferAllocate.ixx  bufferBegin.h  bufferBegin.ixx  commandPoolCreate.h  poolCreate.ixx  renderPassBegin.h  renderPassBegin.ixx
renderer/structs/info/pipeline/: colorBlendStateCreate.h  colorBlendStateCreate.ixx  (+18 more)
renderer/sync/: CMakeLists.txt  fence.cpp  fence.cxx  fence.h  fence.ixx  semaphore.cpp  semaphore.cxx  semaphore.h  semaphore.ixx
renderer/vkStructs/: all.h  appInfo.h  applicationInfo.h  attachmenDescription.h  commands.h  deviceCreateInfo.h  deviceQueueCreationInfo.h  framebufferCreateInfo.h  imageViewCreate.h  instanceCreateInfo.h  pipeline.h  pipelineDynamicStateCreate.h  pipelineShaderStageCreate.h  pipelineVertexInputStateCreate.h  presentInfo.h  renderPass.h  shaderModuleCreate.h  submitInfo.h  swapChainCreateInfo.h  sync.h
renderer/vkStructs/commands/: bufferAllocateInfo.h  bufferBeginInfo.h  commandPoolCreateInfo.h  renderPassBeginInfo.h
renderer/vkStructs/pipeline/: colorBlendAttachmentState.h  colorBlendStateCreateInfo.h  graphicsPipelineCreateInfo.h  inputAssemblyStateCreate.h  layoutCreateInfo.h  multisampleStateCreate.h  rasterizationStateCreateInfo.h  shaderStageCreate.h  viewportStateCreateInfo.h
renderer/vkStructs/renderPass/: renderPassCreateInfo.h  subpassDependency.h  subpassDescription.h
renderer/vkStructs/sync/: fenceCreateInfo.h  semaphoreCreateInfo.h
(+49 files in other folders)
